/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package org.apache.seata.protocol.protobuf.grcpMessage;
option java_multiple_files = true;
option java_outer_classname = "GrpcMessage";
option java_package = "org.apache.seata.core.protocol.generated";

import "registerTMRequest.proto";
import "registerTMResponse.proto";
import "branchRegisterRequest.proto";
import "branchRegisterResponse.proto";
import "branchReportRequest.proto";
import "branchReportResponse.proto";
import "branchRollbackRequest.proto";
import "branchRollbackResponse.proto";
import "globalBeginRequest.proto";
import "globalBeginResponse.proto";
import "globalCommitRequest.proto";
import "globalCommitResponse.proto";



message GrpcMessageProto {
    int32 id = 1;
    int32 messageType = 2;
    map<string, string> headMap = 3;
    bytes body = 4;
}

service SeataService {
    rpc sendRequest (stream GrpcMessageProto) returns (stream GrpcMessageProto);
}